infrastructure/k8s/prd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argent-prd
  labels:
    app: argent
    environment: prd
